RESOLVED FIXED104602
DidHitRelevantRepaintedObjectsAreaThreshold LayoutMilestone fires too early on some pages with iframes
https://bugs.webkit.org/show_bug.cgi?id=104602
Summary DidHitRelevantRepaintedObjectsAreaThreshold LayoutMilestone fires too early o...
Beth Dakin
Reported 2012-12-10 15:15:18 PST
DidHitRelevantRepaintedObjectsAreaThreshold LayoutMilestone fires too early on some pages with iframes. This site is a great example of this bug: http://www2.macleans.ca/2012/11/04/tarnished-silver-assessing-the-new-king-of-stats/
Attachments
Patch (2.08 KB, patch)
2012-12-10 15:20 PST, Beth Dakin
simon.fraser: review+
Radar WebKit Bug Importer
Comment 1 2012-12-10 15:16:01 PST
Beth Dakin
Comment 2 2012-12-10 15:20:17 PST
Beth Dakin
Comment 3 2012-12-10 16:33:34 PST
Thanks, Simon! I committed this: http://trac.webkit.org/changeset/137224
Note You need to log in before you can comment on or make changes to this bug.