https://bugs.webkit.org/show_bug.cgi?id=104602 DidHitRelevantRepaintedObjectsAreaThreshold LayoutMilestone fires too early on some pages with iframes

Reviewed by Simon Fraser.

This change makes it so that any RenderObjects inside iframes are not
considered relevant.
* page/Page.cpp:
(WebCore::Page::addRelevantRepaintedObject):



Canonical link: https://commits.webkit.org/122779@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137224 268f45cc-cd09-0410-ab3c-d52691b4dbfc